# 1stea

./: .gitignore  README.md  pyproject.toml
allegro_probe/: __init__.py  backends.py  demo_scenes.py  franka_scene.py  geometry.py  interfaces.py  manipulation.py  models.py  pose_manipulation.py  primitives.py  protocols.py  scene.py
docs/v1/: main.md  sgst_mani_0.md  sgst_mani_1_fixed_pose.md  sgst_mani_2_dataflow.md  sgst_mani_3_short_can_pick_place.md  suggestion_1.md  suggestion_pre.md
docs/v1/0710/: deep-research-report_0.md  deep-research-report_1.md  learning_free_pose_pick_place.md  my.md  probe_collision_integrity_fix.md  probe_protocol_v2.md  probe_to_manipulation_dataflow.md
docs/v1/0711/: deep-research-report_0.md  franka_arm_integration_issues.md  probe_and_manipulation_execution.md
docs/v2/0711/: README.md  next_stage_research.md  stage1_acceptance_and_usage.md  stage1_franka_allegro_backend_design.md
examples/: __init__.py  run_franka_allegro_stage1.py  run_pose_conditioned_pick_place.py  run_probe_demo.py  run_short_can_pick_place.py
tests/: test_backends.py  test_contracts.py  test_franka_scene.py  test_manipulation.py  test_pose_manipulation.py  test_simulation.py
