[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allegro-probe"
version = "0.1.0"
description = "Validated MuJoCo probe primitives with reference-rig and Allegro-hand backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
allegro-probe-demo = "examples.run_probe_demo:main"

[tool.setuptools.packages.find]
include = ["allegro_probe*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
